changed java version to 1.8, in order to deploy it on heroku