@@ -9,6 +9,7 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -17,7 +18,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class ExtractOfficersTest {
 
-    private final Set<Officer> expectedOfficers = new HashSet<>(List.of(
+    private final Set<Officer> expectedOfficers = new HashSet<>(Arrays.asList(
             new Officer("Abdul", "Khan"),
             new Officer("Anthony", "Capes"),
             new Officer("Dean", "Colquhoun"),
